# CortexOS

./: .gitignore  README.md  eslint.config.mjs  find-buttons.mjs  index.html  package-lock.json  package.json
.github/workflows/: release.yml
extension/: background.js  manifest.json
extension/content-scripts/: linkedin.js  overlay.css
extension/popup/: popup.html  popup.js
src/: App.tsx  globals.css  main.tsx
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chrome_bridge.rs  events.rs  lib.rs  logging.rs  main.rs
src-tauri/src/agents/: copywriter.rs  data_verifier.rs  mod.rs  researcher.rs  strategist.rs
src-tauri/src/commands/: data.rs  flow.rs  jobs.rs  mod.rs  research.rs
src-tauri/src/core/: agents.rs  apollo.rs  flow.rs  llm.rs  memory.rs  mod.rs  tavily.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/hive/: mod.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/orchestration/: agent.rs  daemon.rs  flow_engine.rs  memory.rs  mod.rs
src-tauri/src/prompts/: agents.rs  mod.rs
src-tauri/src/signals/: mod.rs
src/components/: command-palette.tsx  error-boundary.tsx
src/components/ui/: card.tsx  (+11 more)
src/lib/: local-store.ts  mock-data.ts  mock-outreach.ts
src/pages/: agent-builder.tsx  agents.tsx  channels.tsx  companies.tsx  company-detail.tsx  contact-detail.tsx  contacts.tsx  dashboard.tsx  flow.tsx  icp.tsx  integrations.tsx  marketplace.tsx  memory.tsx  outreach.tsx  revenue.tsx  settings.tsx  signals.tsx
(+46 files in other folders)
